--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,15 @@ body {
   padding: 20px;
   border-radius: 10px;
 }
+.columna {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .celda {
   width: 80px;
   height: 80px;
   border-radius: 50%;
   background-color: var(--color-celdas);
-  margin: 10px;
+  margin: 5px;
 }
