--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   --color-celdas: #ccccff;
   --color-fichas-a: #ffff66;
   --color-fichas-b: #ff3333;
+  --color-ventana: #ffffff;
 }
 * {
   padding: 0;
@@ -41,4 +42,22 @@ body {
   0% {
     transform: translateY(-800%);
   }
+}
+#ventana {
+  position: absolute;
+  display: none;
+  width: 300px;
+  height: 300px;
+  background-color: var(--color-ventana);
+  border-radius: 15px;
+}
+#texto-ganador {
+  font-size: 40px;
+  text-align: center;
+  margin-top: 50px;
+}
+#btn-jugardenuevo {
+  padding: 10px 25px 10px 25px;
+  margin-top: 100px;
+  margin-left: 25%;
 }
